<resources>
    <string name="app_name">Upstox_Assignment</string>
    <string name="stock_name">Stock Name</string>
    <string name="quantity">Quantity</string>
    <string name="ltp">LTP</string>
    <string name="avg_price">Avg. Price</string>
    <string name="close">Close</string>
    <string name="portfolio">Portfolio</string>
    <string name="profit_amp_loss"><![CDATA[Profit & Loss]]></string>
    <string name="loading">Loading...</string>
    <string name="current_value">Current Value*</string>
    <string name="total_investment">Total Investment*</string>
    <string name="expand_arrow">expand arrow</string>
    <string name="todays_profit_amp_loss"><![CDATA[Today\'s P&L]]></string>
    <string name="p_amp_l"><![CDATA[P&L]]></string>
    <string name="net_qty">NET QTY</string>
</resources>