<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upper_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="6dp"
        android:paddingHorizontal="6dp"
        >

        <TextView
            android:id="@+id/stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/stock_ltp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ltp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="@id/stock_name"
            app:layout_constraintEnd_toStartOf="@id/stock_ltp_value"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/stock_ltp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ltp"
            tools:text="123"
            app:layout_constraintTop_toTopOf="@id/stock_name"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upper_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:paddingBottom="6dp"
        android:paddingHorizontal="6dp">

        <TextView
            android:id="@+id/net_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_qty"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/net_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/net_quantity_label"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/pnl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_amp_l"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pnl_value"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/pnl_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
